--- a/gulpstart/src/html/helloworld.html
+++ b/gulpstart/src/html/helloworld.html
@@ -19,8 +19,9 @@
 
 <body>
     <input id="input1" class="" />
+    <input type="checkbox" checked="true" />
     <script type="text/javascript">
-        document.getElementById.innerHTML("input1").value = "练习练习";
+        document.getElementById("input1").value = "练习练习";
     </script>
 </body>
 
